crates/rs_html_parser_tokenizer/tests/snapshots/h2_tokenizer_test__tests__entities_for_attributes.snap
---
source: crates/rs_html_parser_tokenizer/tests/h2_tokenizer_test.rs
expression: "tokenize(\"<img src=\\\"?&image_uri=1&&image;=2&image=3\\\"/>?&image_uri=1&&image;=2&image=3\")"
---
[
    TokenizerToken {
        start: 1,
        end: 4,
        offset: 0,
        location: OpenTagName,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 5,
        end: 8,
        offset: 0,
        location: AttrName,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 10,
        end: 23,
        offset: 0,
        location: AttrData,
        code: 0,
        quote: Double,
    },
    TokenizerToken {
        start: 23,
        end: 24,
        offset: 0,
        location: AttrEntity,
        code: 38,
        quote: Double,
    },
    TokenizerToken {
        start: 24,
        end: 31,
        offset: 0,
        location: AttrEntity,
        code: 8465,
        quote: Double,
    },
    TokenizerToken {
        start: 31,
        end: 41,
        offset: 0,
        location: AttrData,
        code: 0,
        quote: Double,
    },
    TokenizerToken {
        start: 42,
        end: 42,
        offset: 0,
        location: AttrEnd,
        code: 0,
        quote: Double,
    },
    TokenizerToken {
        start: 43,
        end: 43,
        offset: 0,
        location: SelfClosingTag,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 44,
        end: 57,
        offset: 0,
        location: Text,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 57,
        end: 58,
        offset: 0,
        location: TextEntity,
        code: 38,
        quote: NoValue,
    },
    TokenizerToken {
        start: 58,
        end: 65,
        offset: 0,
        location: TextEntity,
        code: 8465,
        quote: NoValue,
    },
    TokenizerToken {
        start: 65,
        end: 75,
        offset: 0,
        location: Text,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 75,
        end: 75,
        offset: 0,
        location: End,
        code: 0,
        quote: NoValue,
    },
]
