crates/rs_html_parser_tokenizer/tests/snapshots/h2_tokenizer_test__tests__for_normal_self_closing_special_tag.snap
---
source: crates/rs_html_parser_tokenizer/tests/h2_tokenizer_test.rs
expression: "(tokenize(\"<style />&apos;<br/>\"))"
---
[
    TokenizerToken {
        start: 1,
        end: 6,
        offset: 0,
        location: OpenTagName,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 8,
        end: 8,
        offset: 0,
        location: SelfClosingTag,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 9,
        end: 15,
        offset: 0,
        location: TextEntity,
        code: 39,
        quote: NoValue,
    },
    TokenizerToken {
        start: 16,
        end: 18,
        offset: 0,
        location: OpenTagName,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 19,
        end: 19,
        offset: 0,
        location: SelfClosingTag,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 20,
        end: 20,
        offset: 0,
        location: End,
        code: 0,
        quote: NoValue,
    },
]
